[tool.poetry]
name = "pdga-ratings"
version = "0.1.0"
description = ""
authors = ["Pipedream <duane7997@gmail.com>"]
readme = "README.md"
packages = [{include = "pdga_ratings"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
requests-html = "^0.10.0"
pandas = "^2.0.1"
python-dateutil = "^2.8.2"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
